- Annoncement: Use plain search of the annotation prefix.
- Languages: fixed the display of values not changing in time.