@@ -218,10 +218,14 @@ end
 
 function languages:formatOutcomingMessage(message)
   if self.serverLanguagesData and self.selectedLanguage and message.text then
+    local originalText = message.text
 
     message.text = message.text:gsub('%b""', function(quoted)
       return '"^clear;' .. self.selectedLanguage .. "^reset;" .. quoted:sub(2)
     end)
+
+    message.silent = true
+    player.say(originalText)
   end
   return message
 end
